--- a/cookbooks/apache/templates/index.html.erb
+++ b/cookbooks/apache/templates/index.html.erb
@@ -4,3 +4,4 @@
 <h2>CPU : <%= node['cpu']['0']['mhz'] %> </h2>
 <h2>IP Address : <%= node['memory']['total'] %> </h2>
 
+<img src="google_logo.png"> 
